<resources>
    <string name="app_name">ShareBook</string>
    <string name="action_settings">Settings</string>
    <string name="signUpLabel">Sign Up</string>
    <string name="SignInLabel">Sign In</string>
    <string name="connectWithGoogleLabel">Connect With Google</string>
    <string name="connectWithFacebookLabel">Connect With Facebook</string>
    <string name="dialog_title_error">Ups... we have a problem..!</string>
    <string name="loadingMessage">Loading...</string>


    <string name="userLabel">User</string>
    <string name="passwordLabel">Password</string>
    <string name="loginLabel">Login</string>
    <string name="forgotPasswordLabel">Forgot your password?</string>
    <string name="nameLabel">Name</string>
    <string name="emailLabel">Email</string>
    <string name="confirmPasswordLabel">Confirm Password</string>
    <string name="registerLabel">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suggestsReadingLabel">suggests reading</string>
</resources>
