<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:background="@drawable/papyrus_bg"
    tools:context="com.johnson.pablo.sharebook.ui.signIn.welcome.WelcomeFragment">

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:text="@string/signUpLabel" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp"
        android:text="@string/SignInLabel" />

    <Button
        android:id="@+id/connectWithGoogleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/signUpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/connectWithGoogleLabel" />

    <Button
        android:id="@+id/connectWithFacebookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/connectWithGoogleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/connectWithFacebookLabel" />

</RelativeLayout>
